k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-health-assistant-deployment
  labels:
    app: ai-health-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-health-assistant
  template:
    metadata:
      labels:
        app: ai-health-assistant
    spec:
      containers:
        - name: ai-health-assistant
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401031/ai-health-assistant:v1
          ports:
            - containerPort: 8501
