k8s/sevice.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-healthcare-service
  labels:
    app: ai-healthcare
spec:
  type: LoadBalancer
  selector:
    app: ai-healthcare
  ports:
    - name: http
      protocol: TCP
      port: 8501
      targetPort: 8501
